--- a/index.html
+++ b/index.html
@@ -29,17 +29,43 @@
       <section>
 
         <article>
-          山路を登りながら、こう考えた。
+          <h1>団塚</h1>
+<h4>danzuka</h4>
+<P>
+  だんづかです。
+  こんにちは。
+</P>
+<h4>tetsu</h4>
+<P>
+  犬がいます。<br>
+  それはコーギーです。<br>
+</P>
         </article>
 
         <article>
-          article 02
+          <h1>食べ物</h1>
+<h4>好き</h4>
+<ul>
+   <li>皿うどん</li>
+   <li>目玉焼き</li>
+   <li>ウインナー</li>
+</ul>
+<h4>嫌い</h4>
+<ol>
+ <li>ししゃも</li>
+  <li>とうもろこし</li>
+  <li>パスタ</li>
+</ol>
         </article>
 
       </section>
 
       <aside>
-        aside
+        <h1>関連リンク</h1>
+<ul>
+  <li><a href="https://www.kyusan-u.ac.jp">九州産業大学</a></li>
+  <li><a href="https://www.nhk.or.jp/kirin/">KIRIN</a></li>
+</ul>
       </aside>
 
     </main>
