--- a/index.html
+++ b/index.html
@@ -30,34 +30,72 @@
 
         <article>
           <h1>団塚</h1>
-<h4>danzuka</h4>
-<P>
-  だんづかです。
-  こんにちは。
-</P>
-<h4>tetsu</h4>
-<P>
-  犬がいます。<br>
-  それはコーギーです。<br>
-</P>
+          <h4>danzuka</h4>
+           <p>だんづかです。こんにちは。</p>
+　　　　　　<h4>tetsu</h4>
+			<p>犬がいます。<br>
+               それはコーギーです。<br></p>
         </article>
 
         <article>
           <h1>食べ物</h1>
-<h4>好き</h4>
-<ul>
-   <li>皿うどん</li>
-   <li>目玉焼き</li>
-   <li>ウインナー</li>
-</ul>
-<h4>嫌い</h4>
-<ol>
- <li>ししゃも</li>
-  <li>とうもろこし</li>
-  <li>パスタ</li>
-</ol>
+          <h4>好き</h4>
+           <ul>
+            <li>皿うどん</li>
+            <li>目玉焼き</li>
+            <li>ウインナー</li>
+           </ul>
+          <h4>嫌い</h4>
+           <ol>
+            <li>ししゃも</li>
+            <li>とうもろこし</li>
+            <li>パスタ</li>
+           </ol>
         </article>
-
+　　　　　 <article> 
+		  <h1>Sample Video</h1>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/aRDURmIYBZ4?list=WL" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+		  </iframe>
+		  </article>
+         <article>
+		  <h1>Sample Image</h1>
+           <img src="images/forest.jpeg" width="480" alt="サンプル">
+		   <img src="images/me.jpeg" width="480" alt="サンプル">
+		 </article>
+         <article>
+		  <h1>表組み</h1>
+           <table  border="1" rules="all">
+            <thead>
+             <tr>
+              <th>商品</th>
+              <th>価格</th>
+             </tr>
+            </thead>
+            <tfoot>
+             <tr>
+              <td>合計金額</td>
+              <td>250円</td>
+             </tr>
+            </tfoot>
+            <tbody>
+             <tr>
+              <td>鉛筆</td>
+              <td>150円</td>
+             </tr>
+             <tr>
+              <td>消しゴム</td>
+              <td>100円</td>
+             </tr>
+            </tbody>
+           </table>
+	     </article> 
+         <article>
+	      <h1>Sample Form</h1>
+           <form action="http://www.google.com/search" method="get">
+            <label >Google: </label>
+            <input type="search" name="q">
+           </form>
+		 </article> 
       </section>
 
       <aside>
